ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: dockersamples/examplevotingapp_ui:latest
        ports:
        - containerPort: 80
