result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: voting-app
spec:
  selector:
    app: result
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31001
  type: NodePort
