ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: voting-app
spec:
  selector:
   app: ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31002
    type: NodePort
