vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: voting-app
spec:
  selector:
    app: vote
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31000
  type: NodePort
